ADD diseño login y register

--- a/resultado-final/register.html
+++ b/resultado-final/register.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro - CarpiShop</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/auth.css" />
 </head>
 <body>
-  <main style="padding: 2rem; max-width: 400px; margin: auto;">
+  <main class="auth-container">
     <h2>Crear cuenta</h2>
     <form id="registerForm">
-      <input type="email" id="email" placeholder="Correo electrónico" required style="width: 100%; margin-bottom: 10px;">
-      <input type="password" id="password" placeholder="Contraseña" required style="width: 100%; margin-bottom: 10px;">
-      <button type="submit" style="width: 100%;">Registrarse</button>
+      <input type="email" id="email" placeholder="Correo electrónico" required />
+      <input type="password" id="password" placeholder="Contraseña" required />
+      <button type="submit">Registrarse</button>
+      <p class="auth-link">¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a></p>
     </form>
   </main>
 
