--- a/resultado-final/login.html
+++ b/resultado-final/login.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iniciar sesión</title>
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/auth.css" />
 </head>
 <body>
-  <main style="padding: 2rem; max-width: 400px; margin: auto;">
+  <main class="auth-container">
     <h2>Iniciar Sesión</h2>
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Correo electrónico" required style="width: 100%; margin-bottom: 10px;" />
-      <input type="password" id="password" placeholder="Contraseña" required style="width: 100%; margin-bottom: 10px;" />
-      <button type="submit" style="width: 100%;">Iniciar sesión</button>
+      <input type="email" id="email" placeholder="Correo electrónico" required />
+      <input type="password" id="password" placeholder="Contraseña" required />
+      <button type="submit">Ingresar</button>
+      <p class="auth-link">¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
     </form>
   </main>
 
