FIX se arregla el diseño de login, register y home

--- a/resultado-final/home.html
+++ b/resultado-final/home.html
@@ -1,52 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bienvenido a CarpiShop</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-    .bienvenida {
-      max-width: 400px;
-      padding: 2rem;
-      background-color: #f8f8f8;
-      border-radius: 10px;
-    }
-    .bienvenida h1 {
-      margin-bottom: 1rem;
-    }
-    .bienvenida button {
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn-login {
-      background-color: #007bff;
-      color: white;
-    }
-    .btn-register {
-      background-color: #28a745;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="./css/home.css" />
 </head>
 <body>
-  <div class="bienvenida">
-    <h1>Bienvenido a CarpiShop</h1>
-    <p>Por favor, inicia sesión o regístrate para continuar.</p>
-    <div>
-      <button onclick="location.href='login.html'" class="btn-login">Iniciar sesión</button>
-      <button onclick="location.href='register.html'" class="btn-register">Registrarse</button>
+  <header class="top-bar">
+    <div class="nav-buttons">
+      <a href="login.html" class="btn">Iniciar sesión</a>
+      <a href="register.html" class="btn btn-secondary">Registrarse</a>
     </div>
+  </header>
+
+  <div class="welcome-container">
+    <h1>Bienvenido a <span>CarpiShop</span> 🛍️</h1>
+    <p>Tu tienda online de confianza. Accede o crea una cuenta para comenzar.</p>
   </div>
 </body>
 </html>
