--- a/resultado-final/home.html
+++ b/resultado-final/home.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bienvenido a CarpiShop</title>
+  <title>Bienvenido a QAShop</title>
   <link rel="stylesheet" href="./css/home.css" />
+  <link rel="stylesheet" href="./css/auth.css" />
 </head>
+
 <body>
-  <header class="top-bar">
-    <div class="nav-buttons">
-      <a href="login.html" class="btn">Iniciar sesión</a>
-      <a href="register.html" class="btn btn-secondary">Registrarse</a>
-    </div>
-  </header>
+
+<header class="top-bar">
+
+  <div class="nav-buttons">
+    <a href="login.html" class="btn">Iniciar sesión</a>
+    <a href="register.html" class="btn btn-secondary">Registrarse</a>
+  </div>
+</header>
 
   <div class="welcome-container">
-    <h1>Bienvenido a <span>CarpiShop</span> 🛍️</h1>
-    <p>Tu tienda online de confianza. Accede o crea una cuenta para comenzar.</p>
+    <img src="./img/logo/logo2.png" alt="CarpiShop Logo" class="auth-logo" />
+
+    <h1>Bienvenido a <span>QAShop</span> 🛍️</h1>
+    <p>Tu tienda online de confianza</p>
+    <br>
+    <a href="login.html" class="btn">Comprar ahora!</a>
   </div>
 </body>
+
 </html>
