--- a/resultado-final/index.html
+++ b/resultado-final/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarpiShop</title>
+    <title>QAShop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -14,13 +14,13 @@
 <body>
     <script>
         if (localStorage.getItem("auth") !== "true") {
-            window.location.href = "login.html";
+            window.location.href = "home.html";
         }
     </script>
 
     <div class="wrapper">
         <header class="header-mobile">
-            <h1 class="logo">CarpiShop</h1>
+            <h1 class="logo">QAShop</h1>
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -30,7 +30,7 @@
                 <i class="bi bi-x"></i>
             </button>
             <header>
-                <h1 class="logo">CarpiShop</h1>
+                <h1 class="logo">QAShop</h1>
             </header>
             <nav>
                 <ul class="menu">
@@ -55,7 +55,24 @@
                             <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
+                    <!--
+                    <li>
+                        <button id="favoritos" class="boton-menu boton-categoria">
+                            <i class="bi bi-heart-fill"></i> Favoritos
+                        </button>
+                    </li>
+                      -->
+                    <li>
+                        <button id="logout" class="boton-menu" style="background: none; border: none; cursor: pointer;">
+                            <i class="bi bi-box-arrow-right"></i> Cerrar sesión
+                        </button>
+                    </li>
+
+
+
+
                 </ul>
+
             </nav>
             <footer>
                 <p class="texto-footer">© 2022 Carpi Coder</p>
@@ -70,8 +87,8 @@
     </div>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="./js/main.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
