--- a/resultado-final/login.html
+++ b/resultado-final/login.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iniciar sesión</title>
   <link rel="stylesheet" href="./css/auth.css" />
 </head>
+
 <body>
   <main class="auth-container">
+    <a href="home.html">
+      <img src="./img/logo/logo.png" alt="CarpiShop Logo" class="auth-logo" />
+    </a>
+
     <h2>Iniciar Sesión</h2>
     <form id="loginForm">
       <input type="email" id="email" placeholder="Correo electrónico" required />
@@ -19,4 +25,5 @@
 
   <script src="./js/login.js"></script>
 </body>
+
 </html>
