--- a/resultado-final/index.html
+++ b/resultado-final/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/auth.css">
 </head>
 
 <body>
@@ -21,6 +22,7 @@
     <div class="wrapper">
         <header class="header-mobile">
             <h1 class="logo">QAShop</h1>
+           
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -30,7 +32,7 @@
                 <i class="bi bi-x"></i>
             </button>
             <header>
-                <h1 class="logo">QAShop</h1>
+                 <img src="/img/logo/logo2.png" alt="" class="auth-logo">
             </header>
             <nav>
                 <ul class="menu">
@@ -67,15 +69,11 @@
                             <i class="bi bi-box-arrow-right"></i> Cerrar sesión
                         </button>
                     </li>
-
-
-
-
                 </ul>
 
             </nav>
             <footer>
-                <p class="texto-footer">© 2022 Carpi Coder</p>
+                <p class="texto-footer">© 2025 QA Coder</p>
             </footer>
         </aside>
         <main>
