FIX, se arregla la alerta del login

--- a/resultado-final/login.html
+++ b/resultado-final/login.html
@@ -21,6 +21,8 @@
       <button type="submit">Ingresar</button>
       <p class="auth-link">¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
     </form>
+    <div id="loginMessage" style="display: none; margin-top: 10px;"></div>
+
   </main>
 
   <script src="./js/login.js"></script>
