--- a/resultado-final/index.html
+++ b/resultado-final/index.html
@@ -84,6 +84,8 @@
         </main>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/main.js"></script>
